# in-my-head

./: .editorconfig  .eslintrc.json  .gitignore  ACTION_PLAN.md  API_KEY_SETUP_COMPLETE.md  BACKUP_RESTORE_GUIDE.md  BULK_UPLOAD_GUIDE.md  Backup_Data.ps1  Bulk_Upload_Documents.ps1  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Check_Git_Security.ps1  Create_Desktop_Shortcut.ps1  DATABASE_RESET_SUCCESS.md  DATA_SECURITY_GUIDE.md  DEPLOYMENT_SUCCESS.md  DOCKER_DEPLOYMENT_STATUS.md  ENHANCEMENT_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  InMyHead.py  LICENSE  LOCAL_DEVELOPMENT_SETUP_COMPLETE.md  MIGRATION_STATUS.md  PROJECT_INITIALIZATION_REPORT.md  Package_Application.ps1  QUICK_DATABASE_SETUP.md  QUICK_START_MIGRATION.md  README.md  README_PHASE_2.md  Restore_Data.ps1  SECURITY.md  SECURITY_FIX_SUMMARY.md  SECURITY_REMEDIATION.md  SESSION_2_SUMMARY.md  Setup_Git_Security.ps1  Start_InMyHead.bat  Start_InMyHead.ps1  TASK_002_VALIDATION_REPORT.md  TASK_02_CHUNKING_COMPLETE.md  (+21 more)
services/ai-engine/: Dockerfile.dev  check_documents_schema.py  initialize_qdrant.py  pyproject.toml  pytest.ini  requirements.docker.txt  requirements.txt  setup_nltk.py  test_chunking.py
services/ai-engine/eval/: README.md  gold_set.json  run_eval.py
services/ai-engine/migrations/: 001_initial_schema.sql
services/ai-engine/scripts/: migrate_embeddings.py
services/ai-engine/src/: config.py  db_init.py  main.py
services/ai-engine/tests/: conftest.py  test_cache_service.py  test_cached_rag_service.py  test_chunker_service.py  test_collection_service.py  test_collections_routes.py  test_conversation_service.py  test_conversations_routes.py  test_documents_routes.py  test_edge_cases.py  test_llm_service.py  test_qdrant_service.py  test_rag_service.py  test_semantic_cache.py
services/document-processor/: DEPLOYMENT.md  Dockerfile  Dockerfile.dev  PHASE_3_7_COMPLETE.md  PHASE_3_8_COMPLETE.md  PHASE_3_9_COMPLETE.md  PHASE_3_COMPLETE.md  README.md  alembic.ini  benchmark.py  create_tables.py  pyproject.toml  requirements-minimal.txt  requirements-ultra-minimal.txt  requirements.docker.txt  requirements.txt  start_celery_workers.ps1  test_metadata.py
services/document-processor/alembic/: README.md  env.py
services/document-processor/examples/: api_demo.py  enrichment_demo.py  vector_storage_demo.py
services/document-processor/src/: app.py  main.py
services/resource-manager/: Dockerfile.dev  pyproject.toml  requirements.txt
services/search-service/: Dockerfile.dev  pyproject.toml  requirements.txt
(+623 files in other folders)
