[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inmyhead-document-processor"
version = "0.1.0"
description = "Document processing service for In My Head"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["document-processing", "pdf", "docx", "parsing"]
authors = [
  {name = "In My Head Team"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
